--- a/css/screen.css
+++ b/css/screen.css
@@ -38,24 +38,32 @@
     --global-color-neutral-xx-dark: #4b4c60;
     --global-color-neutral-xxx-dark: #35374d;
     --global-color-neutral-xxxx-dark: #20223a;
+    --global-color-error: #FF3333;
+    --global-color-error-transparent: #FF3333bf;
+    --global-color-error-x-transparent: #FF33334d;
 
     /* global page settings */
-    --global-html-color: var(--global-color-neutral-xxxx-dark);
-    --global-html-backgroundColor: var(--global-color-neutral-xxxx-light);
-    --global-selection-backgroundColor: var(--global-color-alpha);    
+    --global-page-color: var(--global-color-neutral-xxxx-dark);
+    --global-page-backgroundColor: var(--global-color-neutral-xxxx-light);
+    --global-selection-backgroundColor: var(--global-color-alpha);
 
-    /* borders */
+    /* border radius */
     --global-borderRadius: 3px;
     --global-borderWidth: 1px;
 
     /* transitions */
-    --global-transitionTiming-alpha: .1s ease-out;
+    --global-transitionEasing-out: ease-out;
+    --global-transitionEasing-out-cubic: cubic-bezier(0.22, 0.61, 0.36, 1);
+    --global-transitionDuration-alpha: .1s;
+    --global-transitionDuration-beta: .2s;
+    --global-transitionDuration-gamma: .3s;
 
-    /* Baseline settings */
+
+     /* Baseline settings */
     --global-baseline: 8px;         
     --global-whitespace: calc(var(--global-baseline) * 3); /* = 24px */
 
-    --global-whitespace-xs: calc(var(--global-baseline) / 2); /* = 4px */
+    --global-whitespace-xs: calc(var(--global-baseline) * .5); /* = 4px */
     --global-whitespace-sm: calc(var(--global-baseline) * 1); /*  = 8px */
     --global-whitespace-md: calc(var(--global-baseline) * 2); /*  = 16px */
     --global-whitespace-lg: calc(var(--global-baseline) * 4); /*  = 32px */
@@ -63,18 +71,19 @@
     --global-whitespace-xxl: calc(var(--global-whitespace) * 3); /*  = 72px */
 
     /* forms */
+    --global-label-color: var(--global-color-neutral-xx-dark);
     --global-placeholder-color: var(--global-color-neutral-x-light);
     --global-input-backgroundColor: White;
     --global-input-color: var(--global-color-neutral-xxxx-dark);
     --global-input-borderColor: var(--global-color-neutral-xxx-light);
     --global-input-hover-borderColor: var(--global-color-neutral-xx-light);
     --global-input-focus-borderColor: var(--global-color-alpha);
+    --global-input-error-borderColor: var(--global-color-error);
+    --global-input-focus-boxShadowSpread: 0 0 0 3px;
     --global-input-focus-boxShadowColor: var(--global-color-alpha-x-transparent);
-    --global-input-focus-boxShadow: 0 0 0 3px var(--global-input-focus-boxShadowColor);
-
-    --global-color-error: red;
-    --global-input-error-borderColor: red;
+    --global-input-error-boxShadowColor: var(--global-color-error-x-transparent);
 }
+    
 
 /*------------------------------------*\
 #GENERIC
@@ -609,6 +618,10 @@ input::placeholder {
     Everything form related here
 */
 
+.c-form-field {
+    position: relative;
+}
+
 .c-form-field--option {
     display: flex;
     align-items: center;
@@ -641,13 +654,13 @@ input::placeholder {
 }
 
 .c-input:hover {
-    border-color: var(--global-input-hover-borderColor);
+    border-color: var(--input-hover-borderColor, var(--global-input-hover-borderColor));
 }
 
 .c-input:focus,
 .c-input:active {
-    border-color: var(--global-input-focus-borderColor);
-    box-shadow: var(--global-input-focus-boxShadow);
+    border-color: var(--input-focus-borderColor, var(--global-input-focus-borderColor));
+    box-shadow: var(--global-input-focus-boxShadowSpread) var(--input-focus-boxShadowColor, var(--global-input-focus-boxShadowColor));
 }
 
 /*
@@ -685,12 +698,20 @@ more padding on the right to avoid overlap
     padding-bottom: 0;
 }
 
-.c-label__error-message {
-
+.c-label--floating {
+    position: absolute;
+    top: calc(var(--global-baseline) * 1.5);
+    left: var(--global-whitespace-sm);
+    padding: var(--global-whitespace-xs)  var(--global-whitespace-sm);
+    background-color: var(--label--floating-backgroundColor, var(--global-input-backgroundColor));
+    transition: transform var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
+    z-index: 1;
+    border-radius: var(--global-borderRadius);
 }
 
-.c-label__error-message.is-visible {
-
+.is-floating,
+.c-form-field:focus-within .c-label--floating {
+    transform: translateY(calc(var(--global-baseline) * -3))
 }
 /*
     Component: Button
@@ -728,11 +749,10 @@ more padding on the right to avoid overlap
 }
 
 .c-button:focus {
-    background-color: var(--button-focus-backgroundColor);
-    border-color: var(--button-focus-borderColor);
-    box-shadow: var(--button-focus-boxShadow);
+    background-color: var(--button-focus-backgroundColor, var(--global-color-alpha));
+    border-color: var(--button-focus-borderColor, var(--global-color-alpha-dark));
+    box-shadow: var(--global-input-focus-boxShadowSpread) var(--button-focus-boxShadowColor, var(--global-input-focus-boxShadowColor));
 }
-
 .c-button:active {
     background-color: var(--button-active-backgroundColor);
     border-color: var(--button-active-borderColor);
@@ -760,11 +780,18 @@ more padding on the right to avoid overlap
 /* Hide the actual input with the class .o-hide-accessible */
 
 .c-custom-option {
-    --custom-option__symbol-Fill: var(--global-color-alpha);
+    --custom-option-background: var(--global-input-backgroundColor);
+    --custom-option-borderRadius: var(--global-borderRadius);
+    --custom-option-borderColor: var(--global-input-borderColor);
+    --custom-option-hover-borderColor: var(--global-input-hover-borderColor);
+    --custom-option-focus-borderColor: var(--global-input-focus-borderColor);
+    --custom-option-focus-boxShadowColor: var(--global-input-focus-boxShadowColor);
+    --custom-option-focus-boxShadow: var(--global-input-focus-boxShadowSpread) var(--custom-option-focus-boxShadowColor);
+    --custom-option__symbol-fill: var(--global-color-alpha);
+    --custom-option-transition: var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
     display: flex;
     align-items: center;
 }
-
 .c-custom-option__fake-input {
     display: flex;
     align-items: center;
@@ -850,16 +877,18 @@ more padding on the right to avoid overlap
 
 .c-custom-toggle {
     --toggle-backgroundColor: var(--global-color-neutral-xxxx-light);
+    --toggle-borderColor: var(--global-input-borderColor);
+    --toggle-focus-borderColor: var(--global-input-focus-borderColor);
     --toggle-checked-borderColor: var(--global-color-alpha-dark);
     --toggle-checked-backgroundColor: var(--global-color-alpha);
-    --toggle-focus-boxShadow: var(--global-input-focus-boxShadow);
+    --toggle-focus-boxShadow: var(--global-input-focus-boxShadowSpread) var(--global-input-focus-boxShadowColor);
+    --toggle-transition: all var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
     --toggle__switch-backgroundColor: White;
     --toggle__switch-checked-backgroundColor: White;
-    --toggle__switch-transition: all var(--global-transitionTiming-alpha);
+    --toggle__switch-transition: all var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
     display: flex;
     align-items: center;
 }
-
 .c-custom-toggle--inverted {
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -991,7 +1020,160 @@ more padding on the right to avoid overlap
 .has-error {
     --label-color: var(--global-color-error);
     --input-borderColor: var(--global-input-error-borderColor);
-  }
+    --input-hover-borderColor: var(--global-input-error-borderColor);
+    --input-focus-borderColor: var(--global-input-error-borderColor);
+    --input-focus-boxShadowColor: var(--global-input-error-boxShadowColor);
+}
+
+/*
+    Like button
+*/
+.c-like__symbol {
+	position: relative;
+	width: 24px;
+	fill: var( --global-color-neutral-x-light );
+	transform: scale(1);
+	transition: transform .5s cubic-bezier(0.2,0.8, 0.3, 2.5);
+	will-change: transform;
+}
+
+.c-like__input:checked + .c-like__label .c-like__symbol {
+	transform: scale(1.1);
+	fill: #D80027;
+}
+/*
+    tent 
+*/
+.c-tent {
+    --tent__icon-size: calc(var(--global-baseline) * 10);
+    --tent-borderRadius: calc(var(--global-borderRadius) * 2);
+    --tent-transition: var(--global-transitionDuration-gamma) var(--global-transitionEasing-out-cubic);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    transition: transform var(--tent-transition);
+    transform: var(--tent-transform, none);
+}
+
+/* shadows are made with before and after for performance */
+
+.c-tent::before,
+.c-tent::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transition: opacity var(--tent-transition);
+    pointer-events: none;
+    border-radius: var(--tent-borderRadius);
+}
+
+.c-tent::before {
+    box-shadow: 0 6px 12px -2px rgba(0,0,0,.125), 0 3px 7px -3px rgba(0,0,0,.2);
+    opacity: var(--tent__before-opacity, 1);
+}
+
+.c-tent::after {
+    box-shadow: 0 50px 100px -20px rgba(0,0,0,.25), 0 30px 60px -30px rgba(0,0,0,.3), 0 -18px 60px -10px rgba(0,0,0,.025);
+    opacity: var(--tent__after-opacity, 0);
+}
+
+.c-tent__body {
+    border-radius: var(--tent-borderRadius);
+    background-color: var(--tent-backgroundColor, white);
+    padding: var(--tent__body-whitespace, calc(var(--tent__icon-size) / 1.25));
+    position: relative;
+    overflow: hidden;
+}
+
+.c-tent__icon-wrapper {
+    width: var(--tent__icon-size);
+    height: var(--tent__icon-size);
+    border-radius: 100%;
+    background-color: var(--tent__icon-backgroundColor, white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: calc(var(--tent__icon-size) / -2);
+    z-index: 10;
+    box-shadow: 0 2px 5px rgba(0,0,0,.1), 0 1px 2px rgba(0,0,0,.07);
+    transition: transform var(--tent-transition);
+    transform: var(--tent__icon-wrapper-transform, none);
+}
+
+.c-tent__icon {
+    width: calc(var(--tent__icon-size) / 1.75);
+    height: calc(var(--tent__icon-size) / 1.75);
+}
+
+.c-tent__content {
+    color: var(--tent__content-color, var(--global-color-neutral));
+    transition: transform var(--tent-transition);
+    transform: var(--tent__content-transform, none);
+}
+
+.c-tent__content > *:last-child,
+.c-tent__content > *:last-child > *:last-child {
+    margin-bottom: 0;
+}
+
+.c-tent__title {
+    font-size: 19px;
+    font-weight: normal;
+    line-height: calc(var(--global-baseline) * 3);
+    margin-bottom: var(--global-whitespace-xs);
+    color: var(--tent__title-color, var(--global-page-color));
+}
+
+.c-tent__action {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-weight: 600;
+    padding: calc(var(--tent__icon-size) / 5) var(--global-whitespace);
+    /* color: var(--tent__action-color, var(--global-color-alpha)); */
+    background-color: var(--tent__action-backgroundColor, var(--global-color-neutral-xxxx-light));
+    transform: var(--tent__action-opacity, translateY(calc(var(--tent__icon-size) / 2)));
+    transition: all var(--tent-transition);
+    opacity: var(--tent__action-opacity, 0);
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-size: 14px;
+}
+
+.c-tent:hover {
+    --tent-transform: translateY(calc(var(--global-whitespace-xs) * -1));
+    --tent__icon-wrapper-transform: scale(.75);
+    --tent__content-transform: translateY(calc(var(--tent__icon-size) / -6));
+    --tent__action-transfrom: none;
+    --tent__action-opacity: 1;
+    --tent__before-opacity: 0;
+    --tent__after-opacity: 1;
+}
+
+.c-tent:active {
+    --tent-transform: none;
+}
+
+/* 
+    icons
+*/
+
+.c-icon__path--color-1 {
+    fill: var(--icon__path-color-1, var(--global-color-alpha-x-transparent));
+}
+
+.c-icon__path--color-2 {
+    fill: var(--icon__path-color-2, var(--global-color-alpha));
+}
 /*------------------------------------*\
 #UTILITIES
 \*------------------------------------*/
